Updated to work under openjdk11.
This is a VERY significant change, and will need extensive testing.